--- a/index.html
+++ b/index.html
@@ -3,43 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tailwind Responsive Page</title>
+  <title>Real Estate</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-800">
+    
 
   <!-- Navbar -->
   <nav class="bg-gray-900 text-white">
     <div class="container mx-auto flex justify-between items-center py-4 px-6">
-      <h1 class="text-2xl font-bold">MySite</h1>
-
-      <!-- Desktop Menu -->
+      <h1 class="text-2xl font-bold">Real Estate</h1>
       <ul class="hidden md:flex space-x-6">
         <li><a href="#" class="hover:text-blue-400">Home</a></li>
         <li><a href="#" class="hover:text-blue-400">About</a></li>
         <li><a href="#contact" class="hover:text-blue-400">Contact</a></li>
       </ul>
-
-      <!-- Mobile Menu Button -->
-      <button id="menu-btn" class="md:hidden text-white text-2xl focus:outline-none">
-        ☰
-      </button>
-    </div>
-
-    <!-- Mobile Menu (hidden by default) -->
-    <div id="mobile-menu" class="hidden md:hidden bg-gray-800">
-      <ul class="flex flex-col space-y-4 p-6">
-        <li><a href="#" class="hover:text-blue-400">Home</a></li>
-        <li><a href="#" class="hover:text-blue-400">About</a></li>
-        <li><a href="#contact" class="hover:text-blue-400">Contact</a></li>
-      </ul>
+      <button class="md:hidden text-white focus:outline-none">☰</button>
     </div>
   </nav>
 
   <!-- Hero Section -->
   <section class="bg-blue-600 text-white text-center py-20">
-    <h1 class="text-4xl md:text-6xl font-bold">Welcome to My Tailwind Page</h1>
-    <p class="mt-4 text-lg">Built only with TailwindCSS</p>
+    <h1 class="text-4xl md:text-6xl font-bold">Welcome to Real Estate Project</h1>
+    <p class="mt-4 text-lg">Explore your own company</p>
     <a href="#contact" class="mt-6 inline-block bg-white text-blue-600 px-6 py-3 rounded-lg font-semibold hover:bg-gray-200">Get in Touch</a>
   </section>
 
@@ -67,27 +53,11 @@
 
   <!-- Footer -->
   <footer class="bg-gray-900 text-white text-center py-6">
-    <p>© 2025 MySite. All rights reserved.</p>
+    <p>© 2025 Real Estate. All rights reserved.</p>
   </footer>
-
-  <!-- JavaScript for Mobile Menu -->
-  <script>
-    const menuBtn = document.getElementById("menu-btn");
-    const mobileMenu = document.getElementById("mobile-menu");
-
-    let menuOpen = false;
-    menuBtn.addEventListener("click", () => {
-      menuOpen = !menuOpen;
-      if (menuOpen) {
-        mobileMenu.classList.remove("hidden");
-        menuBtn.textContent = "✖"; // cross icon
-      } else {
-        mobileMenu.classList.add("hidden");
-        menuBtn.textContent = "☰"; // hamburger icon
-      }
-    });
-  </script>
 
 </body>
 </html>
+
+
 
